--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,8 @@
 name: run data scrapers
 
 on:
-  schedule:
-    - cron: '0 0 * * *' # Every day at 0:00
+  # schedule:
+  #   - cron: '0 0 * * *' # Every day at 0:00
   workflow_dispatch:
 
 jobs:
